rewritted cli