@@ -1,115 +1,110 @@
 package org.example;
 
 import org.example.command.CommandArgs;
+import org.example.command.CommandResult;
 import org.example.command.fields.DateField;
 import org.example.command.fields.EnumField;
 import org.example.command.exceptions.CommandExecutionException;
+import org.example.command.fields.Field;
 
 import java.io.BufferedReader;
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.stream.Collectors;
 
 public class CLI {
+    private BufferedReader ui = new BufferedReader(new InputStreamReader(System.in));
+    private Controller ctrl;
+    private boolean stopflag = false;
 
-    public void handleEnumField(EnumField<?> field) {
-        String s = String.format(
-                "Выберите один из вариантов(и введите):\n%s",
-                field.formatAllowedValues()
-        );
-        System.out.println(s);
+    public CLI(Controller ctrl) {
+        this.ctrl = ctrl;
     }
 
-    public void handleDataField(DateField field) {
-        String s = String.format(
-                "Введите дату\nФормат даты: %s",
-                field.formatDataTimeFormat()
-        );
-        System.out.println(s);
+    Parser.ParseResult readAndParseCommand() throws IOException{
+        String line = ui.readLine();
+        return (line == null) ? null : Parser.parse(line);
     }
 
-    public void exec(Controller ctrl) throws IOException {
-        System.out.println("Start!");
-        boolean stopFlag = false;
-        var br = new BufferedReader(new InputStreamReader(System.in));
-        outerLoop:
-        while(!stopFlag) {
-            var line = br.readLine();
-            if (line == null) break;
-            Parser.ParseResult parseRes = Parser.parse(line);
-            if (parseRes.getCommandName().equals("execute_script")) {
-                try {
-                    var executor = new ScriptExecutor(parseRes.args.get(0), ctrl);
-                    stopFlag = executor.exec();
-                } catch (Exception e) {
-                    System.out.println(String.format("Произошла ошибка: %s", e.getMessage()));
-                }
-                continue;
+    private boolean isSpecialCommand(Parser.ParseResult res) {
+        return res.getCommandName().equals("execute_script");
+    }
+
+    private void handleRegularCommand(Parser.ParseResult res, Controller ctrl) throws IOException {
+        try {
+            CommandArgs model = ctrl.getCommandModel(res.getCommandName());
+
+            if (model != null && !collectMissingArgs(model, res)) {
+                return; // прервано пользователем
             }
-            try {
-                CommandArgs model = ctrl.getCommandModel(parseRes.getCommandName());
-                if (model != null && checkArgs(model, parseRes, br)) {
-                    continue outerLoop;
-                }
-                var res = ctrl.handle(parseRes.getCommandName(), model);
-                System.out.println(res.msg());
-                if (res.data() != null) {
-                    System.out.println(
-                            res.data().stream()
-                            .map(Object::toString)
-                            .collect(Collectors.joining("\n"))
-                    );
-                }
-                stopFlag = res.stopFlag();
-            }
-            catch (CommandExecutionException e) {
-                stopFlag = e.isStopFlag();
-                System.out.println(e.getMessage());
-            }
+
+            var result = ctrl.handle(res.getCommandName(), model);
+            printResult(result);
+            stopflag = result.stopFlag();
+
+        } catch (CommandExecutionException e) {
+            stopflag = e.isStopFlag();
+            System.out.println(e.getMessage());
         }
     }
 
-    private boolean checkArgs(CommandArgs model, Parser.ParseResult res, BufferedReader br) throws IOException {
+    private boolean collectMissingArgs(CommandArgs model, Parser.ParseResult res) throws IOException {
         var fields = model.getFields();
         var args = res.args;
-        for (int i = 0; i<fields.size(); i++) {
-            var field = fields.get(i);
-            if(i<args.size()) {
-                var arg = args.get(i);
-                if (field.isValid(arg)) {
-                    field.setRawValue(args.get(i));
-                    continue;
-                }
-                System.out.println("Один из введённых изначально аргументов некорректен");
-            }
-            if(!field.isRequired()) {
+
+        for (int i = 0; i < fields.size(); i++) {
+            Field<?> field = fields.get(i);
+
+            // Пробуем взять из аргументов командной строки
+            if (i < args.size() && field.isValid(args.get(i))) {
+                field.setRawValue(args.get(i));
                 continue;
             }
-            if (field instanceof EnumField<?>) {
-                handleEnumField((EnumField<?>) field);
-            } else if (field instanceof DateField) {
-                handleDataField((DateField) field);
-            } else {
-                String s = String.format(
-                        "Введите:\n%s(%s)",
-                        field.getName(),
-                        field.getDescription()
-                );
-                System.out.println(s);
-            }
-            String input = br.readLine();
-            if (input == null || input.trim().equals("exit")) {
-                System.out.println("Выполнение команды прервано.");
-                return true;
-            }
-            if (!(field.isRequired()) && input.trim().isEmpty()) continue;
-            if (field.isValid(input)) {
-                field.setRawValue(input);
+
+            // Если поле не обязательное и нет значения — пропускаем
+            if (!field.isRequired() && (i >= args.size() || args.get(i).isBlank())) {
                 continue;
             }
-            System.out.println("Ошибка ввода, неверный тип аргумента. Попробуйте ещё раз!");
-            i--;
+
+            // Запрашиваем у пользователя с повтором при ошибке
+            var fieldPromptService = new FieldPromptService(ui);
+            // успешно валидировано
+            do {
+                boolean success = fieldPromptService.promptForField(field);
+                if (!success) return false; // прервано
+            } while (field.getValue() == null);
         }
-        return false;
+        return true;
+    }
+
+    private void printResult(CommandResult res) {
+        if (!res.msg().isEmpty()) System.out.println(res.msg());
+        if (res.data() != null) {
+            for (var i : res.data()) {
+                System.out.println(i);
+            }
+        }
+    }
+
+    private void handleSpecialCommand(Parser.ParseResult res, Controller ctrl) {
+        try {
+            var executor = new ScriptExecutor(res.args.get(0), ctrl);
+            stopflag = executor.exec();
+        } catch (FileNotFoundException e) {
+            System.out.println("Файл не найден");
+        }
+    }
+
+    public void exec() throws IOException {
+        System.out.println("Let's go");
+        while(!stopflag) {
+            var parseResult = readAndParseCommand();
+            if (parseResult == null) break;
+            if (isSpecialCommand(parseResult)) {
+                handleSpecialCommand(parseResult, ctrl);
+                continue;
+            }
+            handleRegularCommand(parseResult, ctrl);
+        }
     }
 }
